<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layoutSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_settings"
        android:textSize="50sp" />

    <LinearLayout
        android:id="@+id/layoutMaxTemp"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelMaxTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/string_maximum_temperature"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextMaxTemp"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/string_enter_temperature_in_celsius"
            android:inputType="numberSigned"
            android:textSize="16sp"
            tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMinTemp"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelMinTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/string_minimum_temperature"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextMinTemp"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/string_enter_temperature_in_celsius"
            android:importantForAutofill="no"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMaxWalkTime"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelMaxWalkTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/string_maximum_walking_time"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextMaxWalkTime"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/string_enter_time_in_minutes"
            android:inputType="number" />
    </LinearLayout>
</LinearLayout>